--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@vercel/analytics": "^1.3.1",
+    "convex": "^1.13.2",
     "next": "14.2.5",
     "react": "^18",
     "react-dom": "^18",
