--- a/package.json
+++ b/package.json
@@ -9,10 +9,16 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@dnd-kit/core": "^6.1.0",
+    "@gsap/react": "^2.1.1",
     "@vercel/analytics": "^1.3.1",
     "convex": "^1.13.2",
+    "gsap": "^3.12.5",
     "next": "14.2.5",
     "react": "^18",
+    "react-confetti": "^6.1.0",
+    "react-dnd": "^16.0.1",
+    "react-dnd-html5-backend": "^16.0.1",
     "react-dom": "^18",
     "react-router-dom": "^6.26.0"
   },
