--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
     "@dnd-kit/core": "^6.1.0",
     "@gsap/react": "^2.1.1",
     "@vercel/analytics": "^1.3.1",
+    "contentful": "^11.0.3",
     "convex": "^1.13.2",
     "gsap": "^3.12.5",
+    "lucide-react": "^0.447.0",
     "next": "14.2.5",
     "node-fetch": "^3.3.2",
     "react": "^18",
@@ -22,6 +24,7 @@
     "react-dnd-html5-backend": "^16.0.1",
     "react-dom": "^18",
     "react-router-dom": "^6.26.0",
+    "spotify-web-api-node": "^5.0.2",
     "ws": "^8.18.0"
   },
   "devDependencies": {
