--- a/package.json
+++ b/package.json
@@ -11,7 +11,12 @@
   "dependencies": {
     "@dnd-kit/core": "^6.1.0",
     "@gsap/react": "^2.1.1",
+    "@radix-ui/react-icons": "^1.3.0",
+    "@radix-ui/react-progress": "^1.1.0",
+    "@radix-ui/react-slot": "^1.1.0",
     "@vercel/analytics": "^1.3.1",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.1",
     "contentful": "^11.0.3",
     "convex": "^1.13.2",
     "gsap": "^3.12.5",
@@ -25,6 +30,8 @@
     "react-dom": "^18",
     "react-router-dom": "^6.26.0",
     "spotify-web-api-node": "^5.0.2",
+    "tailwind-merge": "^2.5.4",
+    "tailwindcss-animate": "^1.0.7",
     "ws": "^8.18.0"
   },
   "devDependencies": {
