--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "clsx": "^2.1.1",
     "contentful": "^11.0.3",
     "convex": "^1.13.2",
+    "embla-carousel-autoplay": "^8.3.1",
+    "embla-carousel-react": "^8.3.1",
     "gsap": "^3.12.5",
     "lucide-react": "^0.447.0",
     "next": "14.2.5",
@@ -29,6 +31,7 @@
     "react-dnd-html5-backend": "^16.0.1",
     "react-dom": "^18",
     "react-router-dom": "^6.26.0",
+    "react-slick": "^0.30.2",
     "spotify-web-api-node": "^5.0.2",
     "tailwind-merge": "^2.5.4",
     "tailwindcss-animate": "^1.0.7",
